--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,7 +19,7 @@
     <nav class="navbar">
         <div class="topBar">
             <img id="nav-logo" src="/static/Empco-Lite-logo-unofficial-03.png" height="70%" width="70%">
-            <img id="nav-logo" src="/static/MADE_IN_EEUU.jpg" height="50%" width="50%">
+            <img id="nav-logo" src="/static/made-in-usa-stamp.png" height="50%" width="50%">
         </div>
             <i class="uil uil-bars toggle"></i>
         </div>
@@ -132,7 +132,7 @@
                     <div class="row">
                         <div class="col-xl-6 col-lg-6 text-center text-lg-left">
                             <div class="copyright-text">
-                                <p>Website Design & Branding <a href="https://laids.herokuapp.com/">Laids Design</a></p>
+                                <p>Website Design & Branding <a href="https://laids.herokuapp.com/">Vernon Web Designs</a></p>
                             </div>
                         </div>
                         <div class="col-xl-6 col-lg-6 d-none d-lg-block text-right">
