--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -5,58 +5,93 @@
 
 <div class="grid">
 
-    <div class="container pinside30">
-        <div class="meetteam">
-            <h2>In Trusted Hands</h2>
-            <span>Our expert sales team team provides real-world solutions that help you achieve your goals.</span>
-        </div>
-        <div class="profile-card">
-            <img src="http://www.civilbeat.org/wp-content/uploads/2015/10/nick-grube5square-400x400.jpg">
-            <div>
-                <a href="#" target="_blank" class="fa fa-linkedin-square" aria-hidden="true"></a>
-                <h2>Liam Edgecomb</h2>
-                <h3>CEO</h3>
+    <div class="container flex-row black">
+
+        <div class="cd-intro-content mask-2">
+            <div class="content-wrapper">
+                <div>
+
+                    <div id="trusted-hands-container">
+                        <h1>In Trusted Hands</h1>
+                        <p>If you have a question, need a quote or want general information, we're here to help.  Reach out through our contact form, email us, or give us a call. Whatever works best for you, we're here to provide you with the information you need.</p>
+                    </div>
+
+                    <div class="profile-card">
+                        <img src="/static/headshots/liam4x4.png">
+                        <div>
+                            <a href="#" target="_blank" class="fa fa-linkedin-square" aria-hidden="true"></a>
+                            <h2>Liam Edgecomb</h2>
+                            <h3>Assistant General Manager</h3>
+                        </div>
+                    </div>
+                
+                    <div class="profile-card">
+                        <img src="/static/headshots/puffpaff4x4.png">
+                        <div>
+                            <a href="#" target="_blank" class="fa fa-linkedin-square" aria-hidden="true"></a>
+                            <h2>Todd Puffpaff</h2>
+                            <h3>Director of Sales</h3>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
+    
 
-        <div class="profile-card">
-            <img src="https://vlgux.com/img/team/headshots/nick-bray.jpg">
-            <div>
-                <a href="#" target="_blank" class="fa fa-linkedin-square" aria-hidden="true"></a>
-                <h2>Liam EdgeComb</h2>
-                <h3>Product Specialist</h3>
-            </div>
+   
+    </div>
+  
+
+
+
+
+        <div class="contact-container">  
+            <form target="_blank" id="contact" action="https://formsubmit.co/37b2d7dbd2ca1a714bc40ff1c11adbcc" method="POST">
+                <h3>Request Information</h3>
+                <h4>Contact our sales team for a custom quote on products</h4>
+                <fieldset>
+                    <input placeholder="Your name" type="text" name="Name" tabindex="1" required autofocus>
+                </fieldset>
+                <fieldset>
+                    <input placeholder="Your Email Address" type="email" name="Email" tabindex="2" required>
+                </fieldset>
+                <fieldset>
+                    <input placeholder="Your Phone Number" type="tel" name="Phone" tabindex="3" required>
+                </fieldset>
+                <fieldset>
+                    <input placeholder="Your Company" type="url" name="Company url" tabindex="4" required>
+                </fieldset>
+                <fieldset>
+                    <textarea placeholder="Type your message here...." name="Message" tabindex="5" required></textarea>
+                </fieldset>
+                <fieldset>
+                    <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
+                </fieldset>
+                <fieldset>
+                    <input name="_next" type="hidden" value="https://akt-corporation.herokuapp.com/thanks.html" >
+                </fieldset>
+                <fieldset>
+                    <input type="hidden" name="_subject" value="New submission!" >
+                </fieldset>
+            </form>
         </div>
-    </div>
-
-    <div class="contact-container">  
-        <form target="_blank" id="contact" action="https://formsubmit.co/your@email.com" method="POST">
-            <h3>Request Information</h3>
-            <h4>Contact our sales team for a custom quote on products</h4>
-            <fieldset>
-                <input placeholder="Your name" type="text" tabindex="1" required autofocus>
-            </fieldset>
-            <fieldset>
-                <input placeholder="Your Email Address" type="email" tabindex="2" required>
-            </fieldset>
-            <fieldset>
-                <input placeholder="Your Phone Number" type="tel" tabindex="3" required>
-            </fieldset>
-            <fieldset>
-                <input placeholder="Your Company" type="url" tabindex="4" required>
-            </fieldset>
-            <fieldset>
-                <textarea placeholder="Type your message here...." tabindex="5" required></textarea>
-            </fieldset>
-            <fieldset>
-                <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
-            </fieldset>
-        </form>
-    </div>
 
 </div>
 
+    <div id="contact-img">
+        <img src="/static/pexels/pexels-savvas-stavrinos-814544.jpg" alt="" />
+    </div>
+
+
+    
+
+
+
+
+
  
+
+
 
 
 
