--- a/app/templates/lighting_types/highway_construction_lighting.html
+++ b/app/templates/lighting_types/highway_construction_lighting.html
@@ -7,7 +7,7 @@
 
 
 <div class="wrapper product-line"> 
-    <div class="mt80 mb40"><h1>Highway Lights and Audible Devices</h1></div>
+    <div class="mt80 mb40"><h1>Model 2006</h1></div>
     <div class="cols mb100">
 
 
@@ -74,25 +74,39 @@
                     </a>
                 </div>
 
-                <!-- Model 212-3 Solar -->
-                    
+                <!--  Wireless Channelizing Sequential Device -->
+
                 <div class="product-col" ontouchstart="this.classList.toggle('hover');">
-                    <a href="{{ url_for('model212_3_solar') }}">
+                    <a href="{{ url_for('sequential_device') }}">
                         <div class="container">
-                            <div class="front" style="background-image: url(/static/highway/model212-3_solar/Model212-3Solar.jpg)">
+                            <div class="front" style="background-image: url(/static/highway/LED_PC_model_400/Model400LEDPC1.jpg)">
                                 <div class="inner">
-                                    <p>Model 212-3</p>
-                            <span>Solar</span>
+                                    <p>Wireless Channelizing</p>
+                            <span>Sequential Device</span>
                                 </div>
                             </div>
                             <div class="back">
                                 <div class="inner">
-                                <p>Part # 98-81089SOLR, 98-81089RSLR</p>
+                                    <p>Part # 98-2012SMONO, 98-2012SSMON (Solar Assist)</p>
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
+
+
+
+
+
+
+
+
+
+
+    <div class="wrapper  product-line"> 
+        <div class="mb40 mt100"><h1>Model 212-3</h1></div>
+    <div class="cols mb100">
+
 
 
             <!-- Model 212-3 S Solar Assist -->
@@ -109,6 +123,27 @@
                             <div class="back">
                                 <div class="inner">
                                     <p>Part # 98-81089-3S, 98-81089-3RS</p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+
+                <!-- Model 212-3 Solar -->
+    
+                <div class="product-col" ontouchstart="this.classList.toggle('hover');">
+                    <a href="{{ url_for('model212_3_solar') }}">
+                        <div class="container">
+                            <div class="front" style="background-image: url(/static/highway/model212-3_solar/Model212-3Solar.jpg)">
+                                <div class="inner">
+                                    <p>Model 212-3</p>
+                            <span>Solar</span>
+                                </div>
+                            </div>
+                            <div class="back">
+                                <div class="inner">
+                                <p>Part # 98-81089SOLR, 98-81089RSLR</p>
                                 </div>
                             </div>
                         </div>
@@ -137,6 +172,12 @@
                 </div>
 
 
+
+        <div class="wrapper  product-line"> 
+            <div class="mb40 mt100"><h1>Model 400 LED PC & Battery Adapter</h1></div>
+        <div class="cols mb100">
+
+
             <!--  Model Model 400 LED PC -->
             
                 <div class="product-col" ontouchstart="this.classList.toggle('hover');">
@@ -158,21 +199,18 @@
                 </div>
 
 
-
-
-            <!-- audible Device model 400 ADA -->
                 <div class="product-col" ontouchstart="this.classList.toggle('hover');">
-                    <a href="{{ url_for('audible_device_model_400_ADA') }}">
+                    <a href="{{ url_for('LED_PC') }}">
                         <div class="container">
-                            <div class="front" style="background-image: url(/static/highway/audible_device_ADA/Model400ADA3.jpg)">
+                            <div class="front" style="background-image: url(/static/highway/LED_PC_model_400/Model400LEDPC1.jpg)">
                                 <div class="inner">
-                                    <p>Model 400 ADA</p>
-                            <span>Audible Device</span>
+                                    <p>Battery Adapter</p>
+                            <span></span>
                                 </div>
                             </div>
                             <div class="back">
                                 <div class="inner">
-                                    <p>Part # 98-01930</p>
+                                    <p></p>
                                 </div>
                             </div>
                         </div>
@@ -181,7 +219,58 @@
 
 
 
-            <div class="mt80 mb40"><h1>Lighting Reflectors, Portable Speed Bump, & Mounting Brackets</h1></div>
+
+
+
+
+
+    <div class="wrapper  product-line"> 
+        <div class="mb40 mt100"><h1>ADA Devices</h1></div>
+    <div class="cols mb100">
+
+            <!-- audible Device model 400 ADA -->
+            <div class="product-col" ontouchstart="this.classList.toggle('hover');">
+                <a href="{{ url_for('audible_device_model_400_ADA') }}">
+                    <div class="container">
+                        <div class="front" style="background-image: url(/static/highway/audible_device_ADA/Model400ADA3.jpg)">
+                            <div class="inner">
+                                <p>Model 400 ADA</p>
+                        <span>Audible Device</span>
+                            </div>
+                        </div>
+                        <div class="back">
+                            <div class="inner">
+                                <p>Part # 98-01930</p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+            <!-- audible Device model 400 ADA -->
+            <div class="product-col" ontouchstart="this.classList.toggle('hover');">
+                <a href="{{ url_for('audible_device_model_400_ADA') }}">
+                    <div class="container">
+                        <div class="front" style="background-image: url(/static/highway/audible_device_ADA/Model400ADA3.jpg)">
+                            <div class="inner">
+                                <p>Model 400ML</p>
+                        <span>Audible Device</span>
+                            </div>
+                        </div>
+                        <div class="back">
+                            <div class="inner">
+                                <p></p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+
+
+    <div class="wrapper  product-line"> 
+        <div class="mb40 mt100"><h1>Reflectors</h1></div>
+    <div class="cols mb100">
 
 
         <!-- EBMT -->
@@ -328,25 +417,7 @@
                 </a>
             </div>
 
-            <!--  Wireless Channelizing Sequential Device -->
 
-            <div class="product-col" ontouchstart="this.classList.toggle('hover');">
-                <a href="{{ url_for('sequential_device') }}">
-                    <div class="container">
-                        <div class="front" style="background-image: url(/static/highway/LED_PC_model_400/Model400LEDPC1.jpg)">
-                            <div class="inner">
-                                <p>Wireless Channelizing</p>
-                        <span>Sequential Device</span>
-                            </div>
-                        </div>
-                        <div class="back">
-                            <div class="inner">
-                                <p>Part # 98-2012SMONO, 98-2012SSMON (Solar Assist)</p>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
         
 
 
