--- a/app/templates/lighting_types/marine_lighting.html
+++ b/app/templates/lighting_types/marine_lighting.html
@@ -8,18 +8,18 @@
     <div class="mt80 mb40"><h1>Marine Lighting</h1></div>
     <div class="cols mb100">
         
-        <a href="{{ url_for('model_630_solar') }}">
+        <a href="{{ url_for('model400_led_mooring_light') }}">
               <div class="product-col" ontouchstart="this.classList.toggle('hover');">
                   <div class="container">
-                      <div class="front" style="background-image: url(/static/15.jpg)">
+                      <div class="front" style="background-image: url(/static/marine/mooring_light/Model400LEDMooringLight3.jpg)">
                           <div class="inner">
-                              <p>Model 400</p>
-                <span>LED PC</span>
+                              <p>LED Mooring Light</p>
+                <span></span>
                           </div>
                       </div>
                       <div class="back">
                           <div class="inner">
-                            <p>Part # 99-00411L, 99-00421L(Red Lens)</p>
+                            <p>Model 400</p>
                           </div>
                       </div>
                   </div>
@@ -27,12 +27,12 @@
               </div>
           
             <div class="product-col" ontouchstart="this.classList.toggle('hover');">
-                <a href="{{ url_for('model_630_solar') }}">
+                <a href="{{ url_for('barge_light') }}">
                   <div class="container">
-                      <div class="front" style="background-image: url(/static/56.jpg)">
+                      <div class="front" style="background-image: url(/static/marine/barge_light/BargeLightGreen.jpg)">
                           <div class="inner">
-                              <p></p>
-                <span>Barge Light</span>
+                              <p>Barge Light</p>
+                <span></span>
                           </div>
                       </div>
                       <div class="back">
@@ -47,12 +47,12 @@
 
 
             <div class="product-col" ontouchstart="this.classList.toggle('hover');">
-                <a href="{{ url_for('model601_solar_airport_light') }}">
+                <a href="{{ url_for('load_light') }}">
                   <div class="container">
-                      <div class="front" style="background-image: url(/static/95.jpg)">
+                      <div class="front" style="background-image: url(/static/marine/load_light/LoadLight1.jpg)">
                           <div class="inner">
-                              <p></p>
-                                <span>Load Light</span>
+                              <p>Load Light</p>
+                                <span></span>
                           </div>
                       </div>
                       <div class="back">
@@ -67,17 +67,17 @@
 
 
               <div class="product-col" ontouchstart="this.classList.toggle('hover');">
-                <a href="{{ url_for('model601_solar_airport_light') }}">
+                <a href="{{ url_for('solar_dredge_light') }}">
                   <div class="container">
-                      <div class="front" style="background-image: url(/static/101.jpg)">
+                      <div class="front" style="background-image: url(/static/marine/solar_dredge_light/SolarDredgeLightClear1.jpg)">
                           <div class="inner">
-                              <p></p>
-                <span>Dredge Light</span>
+                              <p>Dredge Light</p>
+                        <span>Solar</span>
                           </div>
                       </div>
                       <div class="back">
                           <div class="inner">
-                              <p></p>
+                              <p>Model 100</p>
                           </div>
                       </div>
                   </div>
@@ -86,17 +86,35 @@
 
 
               <div class="product-col" ontouchstart="this.classList.toggle('hover');">
-                <a href="{{ url_for('model601_solar_airport_light') }}">
+                <a href="{{ url_for('dredge_light') }}">
                   <div class="container">
-                      <div class="front" style="background-image: url(/static/56.jpg)">
+                      <div class="front" style="background-image: url(/static/marine/dredge_light/DredgeLightClear.jpg)">
                           <div class="inner">
-                              <p></p>
-                <span>PLL</span>
+                              <p>Dredge Light</p>
+                    <span></span>
                           </div>
                       </div>
                       <div class="back">
                           <div class="inner">
-                              <p></p>
+                              <p>Model 100</p>
+                          </div>
+                      </div>
+                  </div>
+                </a>
+              </div>
+
+              <div class="product-col" ontouchstart="this.classList.toggle('hover');">
+                <a href="{{ url_for('pilot_location_light') }}">
+                  <div class="container">
+                      <div class="front" style="background-image: url(/static/marine/PLL/PilotLocationLight.jpg)">
+                          <div class="inner">
+                              <p>Pilot Location Light</p>
+                    <span></span>
+                          </div>
+                      </div>
+                      <div class="back">
+                          <div class="inner">
+                              <p>Model 100</p>
                           </div>
                       </div>
                   </div>
