--- a/app/templates/lighting_types/railroad_lighting.html
+++ b/app/templates/lighting_types/railroad_lighting.html
@@ -5,13 +5,13 @@
 
 
 <div class="wrapper product-line"> 
-    <div class="mt80 mb40">Railroad Lighting</h1></div>
+    <div class="mt80 mb40"><h1>Railroad Lighting</h1></div>
     <div class="cols mb100">
         
         <div class="product-col" ontouchstart="this.classList.toggle('hover');">
-            <a href="{{ url_for('traffic_signal_lenses') }}">
+            <a href="{{ url_for('blue_flag_light') }}">
                 <div class="container">
-                    <div class="front" style="background-image: url(/static/akt/traffic_lenses/Amber_Yellow_Traffic_Lense.jpg)">
+                    <div class="front" style="background-image: url(/static/railroad/BlueFlagLight.jpg)">
                         <div class="inner">
                             <p>Blue Flag Light</p>
                 <span></span>
@@ -27,9 +27,9 @@
         </div>
           
         <div class="product-col" ontouchstart="this.classList.toggle('hover');">
-            <a href="{{ url_for('no18CenterMountDelineator') }}">
+            <a href="{{ url_for('blue_flag_strobe_light') }}">
                 <div class="container">
-                    <div class="front" style="background-image: url(/static/akt/No18Center/AmberAKTNo18CenterMountDelineator.jpg)">
+                    <div class="front" style="background-image: url(/static/railroad/SolarBlueFlagStrobewHandle.jpg)">
                         <div class="inner">
                             <p>Blue Flag Strobe Light</p>
                             <span></span>
@@ -37,7 +37,7 @@
                     </div>
                     <div class="back">
                         <div class="inner">
-                            <p></p>
+                            <p>Available With Handle</p>
                         </div>
                     </div>
                 </div>
