--- a/app/templates/process.html
+++ b/app/templates/process.html
@@ -5,21 +5,22 @@
 
 
 <section id="process">
-    <div class="row align-items-center">
-      <div class="col-50">
-        <img src="/static/pexels-kateryna-babaieva-2880871.jpg" alt="image">
-      </div>
-      <div class="col-50">
-        <article>
-          <h1>Our Process</h1>
-          <h2>"Old World" Skilled Labor</h2>
-            <p>Our tool makers have years of experience,  founded on the principles learned in the tradition of "Old World" apprenticeship and training. 
-            These tool makers also utilize CNC and EDM technology to produce quality injection molds. With their backgrounds in mold construction and exceptional pride in their work, our people have gained respect and earned a reputation of embodying the expertise required to meet the demand of our customers.
-            </p>          
-        </article>
-      </div>
+  <div class="row align-items-center">
+    <div class="col-50">
+      <img src="/static/pexels-adrien-olichon-2387428.jpg" alt="image">
     </div>
-  </section>
+    <div class="col-50">
+      <article>
+        <h1>Our Process</h1>
+        <h2>"Old World" Skilled Labor</h2>
+          <p>We wanted the highest quality products, so we made them ourselves. All products at AKT and Empco-Lite are made at our Elgin Molded Facility. We've been doing this for over 70 years. That's how we know our process works.  </p>
+          <p>Our tool makers have years of experience,  founded on the principles learned in the tradition of "Old World" apprenticeship and training. 
+          These tool makers also utilize CNC and EDM technology to produce quality injection molds. With their backgrounds in mold construction and exceptional pride in their work, our people have gained respect and earned a reputation of embodying the expertise required to meet the demand of our customers.
+          </p>          
+      </article>
+    </div>
+  </div>
+</section>
 
 
 
