--- a/app/templates/sister_companies.html
+++ b/app/templates/sister_companies.html
@@ -4,13 +4,13 @@
 {% block content %}
 
 <div class="big-image-divisions">
-    <div class="overlay">
+    <div class="overlay-divisions">
       <h1>Our Divisions</h1>
     </div>
 </div> 
 
 <section class=" neutral-primary">
-    <h1 class='pdl80 pdr80'>Our Story</h1>
+    <h1 class='pdl80 pdr80 mb60'>Our Story</h1>
     <p class='pdl80 pdr80' > It all started with a few very determined people, working in garage-like, 750 square-foot structure. Their vision? They wanted to produce the highest quality products on time, each an everytime. They formed Elgin Molded Plastics in 1949, and very quickly was considered a leader in custom injection molding. Dedication to excellence led to success, and the business thrived for many years. In the 1960's, Elgin Molded decided to expand into the manufacturing industry. The leaders at Elgin Molded decided to fill a hole in the lighting industry, and started Empco-Lite, which focused soley on manufacturing lighting products. More specifically, they wanted to focus on producing and manufacturing high-quality highway, airport, marine, and railroad lighting products.  A similar pattern emerged in the 70's, where once again there was a need to fill a hole, this time in the construction industry. So in 1978, AKT Corporation was formed with the purpose of manufacturing delineators, guardrail delineators, barrier wall markers and traffic signal lenses. 
     <p class='pdl80 pdr80'>Today, we are proud to be industry leaders in multiple different industries. All of our Empco-Lite and AKT Corporation products are molded through Elgin Molded Plastics (EMP). We have been industry leaders for over 75 years because we have evolved with the times, but we have also stayed true to our roots. We attribute our current success to the same dedication of excellence that our founders had. All of our products are made in America, right in our Elgin Molded Facility. We are a family-owned business, a woman-owned business, and we are forever proud of the work we do here. </p>
 </section>
@@ -19,8 +19,8 @@
 <div class="image-effect-container flex-row">
         <div class="image-effect-wrapper">
             <div class="box w-content">
-            <img src="https://source.unsplash.com/900x900/?dark
-        " alt="Jenny of Oldstones">
+            <img src="/static/pexels/pexels-pixabay-35016.jpg
+        " alt="img">
             <div class="frame">
                 <h2>Expertise, Technology, and Quality</h2>
             </div>
@@ -29,8 +29,8 @@
 
         <div class="image-effect-wrapper">
             <div class="box w-content">
-            <img src="https://source.unsplash.com/900x900/?business
-        " alt="Jenny of Oldstones">
+            <img src="/static/pexels/pexels-flickr-149387.jpg
+        " alt="img">
             <div class="frame">
                 <h2>Industry Leaders</h2>
             </div>
@@ -39,8 +39,8 @@
 
         <div class="image-effect-wrapper">
             <div class="box w-content">
-            <img src="https://source.unsplash.com/900x900/?solid
-        " alt="Jenny of Oldstones">
+            <img src="/static/pexels/pexels-adrien-olichon-2387793.jpg
+        " alt="img">
             <div class="frame">
                 <h2>Since 1949</h2>
             </div>
@@ -53,38 +53,38 @@
 
 <section class="about">
     <div class="about-container">
-    <div class="col-3 text--center">
-        <img src="/static/akt/_567_guardrail_delineator_/AKT567GuardrailDelineator2.jpg" alt="" class="details-img--ball"/>
+    <div class="col-3 text--center pdl80">
+        <img src="/static/reflectors/EBMT/EBMT_1.jpg" alt="" class="details-img--ball"/>
     </div>
     <div class="col-7 details">
         <h3 class="">AKT Corporation</h3>
-        <p>AKT Corporation was formed in 1978, as a manufacturer and supplier of 3" delineators, guardrail delineators, barrier wall markers and traffic signal lenses.</p>
-        <a href="{{ url_for('index') }}" class="btn">Home Page</a>
+        <p class="mr100">AKT Corporation was formed in 1978, as a manufacturer and supplier of 3" delineators, guardrail delineators, barrier wall markers and traffic signal lenses.</p>
+        <a href="{{ url_for('index') }}" class="btn">Learn More</a>
     </div>
     </div>
 </section>
 
 <section class="about">
     <div class="about-container">
-    <div class="col-3 text--center">
-        <img src="/static/Model2006SolarAssist(1).jpg" alt="" class="details-img--ball"/>
+    <div class="col-3 pdl80">
+        <img src="/static/plant_pictures/IMG_7474_Fotor.jpg" alt="" class="details-img--ball"/>
     </div>
     <div class="col-7 details">
         <h3>Empco-Lite</h3>
-        <p>Empco-Lite was founded in 1968, making airline, construction, railroad, and marine lighting products available to customers. </p>
-            <a href="{{ url_for('index') }}" class="btn">Learn More</a>
+        <p class="mr100">Empco-Lite was founded in 1968, making airline, construction, railroad, and marine lighting products available to customers. </p>
+            <a href="{{ url_for('index') }}" class="btn">Home Page</a>
     </div>
     </div>
 </section>
 
 <section class="about">
     <div class="about-container">
-    <div class="col-3 text--center">
-        <img src="/static/Model2006SolarAssist(1).jpg" alt="" class="details-img--ball"/>
+    <div class="col-3 pdl80">
+        <img src="/static/plant_pictures/IMG_7493_Fotor.jpg" alt="" class="details-img--ball"/>
     </div>
     <div class="col-7 details">
         <h3>Elgin Molded</h3>
-        <p>Elgin Molded Plastics, founded over 70 years ago, now has 19 injection molding presses ranging from 85 ton to 500 ton.</p>
+        <p class="mr100">Elgin Molded Plastics, founded over 70 years ago, now has 19 injection molding presses ranging from 85 ton to 500 ton.</p>
         <a href="https://elginmolded.com/index.html" class="btn">Learn More</a>
     </div>
     </div>
