--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,7 +18,7 @@
 
     <nav class="navbar">
         <div class="topBar">
-            <img id="nav-logo" src="/static/Empco-Lite-logo-unofficial-03.png" height="70%" width="70%">
+            <img id="nav-logo" src="/static/Empco-Lite-black-lightning-07.png" height="100%" width="100%">
             <img id="nav-logo" src="/static/made-in-usa-stamp.png" height="50%" width="50%">
         </div>
             <i class="uil uil-bars toggle"></i>
@@ -99,13 +99,13 @@
                                     <h3>Useful Links</h3>
                                 </div>
                                 <ul>
-                                    <li><a href="#">AKT Corporation</a></li>
+                                    <li><a href="https://www.aktinc.com/">AKT Corporation</a></li>
                                     <li><a href="{{ url_for('airport_lighting') }}">Airport Lighting</a></li>
-                                    <li><a href="{{ url_for('contact') }}">Meet the Team</a></li>
-                                    <li><a href="{{ url_for('highway_construction_lighting') }}">Highway Construction</a></li>
+                                    <li><a href="https://elginmolded.com/">Elgin Molded Plastics</a></li>
+                                    <li><a href="{{ url_for('highway_construction_lighting') }}">Construction Lighting</a></li>
                                     <li><a href="{{ url_for('sister_companies') }}">Divisions</a></li>
                                     <li><a href="{{ url_for('marine_lighting') }}">Marine Lighting</a></li>
-                                    <li><a href="#">Elgin Molded Plastics</a></li>
+                                    <li><a href="{{ url_for('contact') }}">Our Team</a></li>
                                     <li><a href="{{ url_for('railroad_lighting') }}">Railroad Lighting</a></li>
                                 </ul>
                             </div>
